<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    tools:context=".Activity2_login_next">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"
        android:background="@drawable/custom_editing">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:id="@+id/SignUp"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/SignUpName"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="Name"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/SignUpUsername"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="Username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="15dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/SignUpPassword"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/SignUpEmail"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="Email"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/SignUpPhoneNo"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_phone_24"
                android:drawablePadding="8dp"
                android:hint="Mobile Number(Optional)"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="15dp"/>


            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/SignUpButton"
                android:text="SignUp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/black"
                app:cornerRadius = "15dp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textSize="20sp"
                android:text="Response: " />

            <TextView
                android:id="@+id/Response"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text=""
                android:textColor="@color/black"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>