<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:id="@+id/loginText"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/username"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="Username"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="40dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_editing"
                android:drawableLeft="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="Password"
                android:padding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/loginButton"
                android:text="Login"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"/>




<!--            <TextView-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:textSize="30sp"-->
<!--                android:text="Response: " />-->
<!--            <ScrollView-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content">-->
<!--            <TextView-->
<!--                android:id="@+id/message"-->
<!--                android:layout_width="fill_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="50dp"-->
<!--                android:textColor="@color/black"-->
<!--                android:text="" />-->
<!--            </ScrollView>-->



        </LinearLayout>

    </androidx.cardview.widget.CardView>
    </ScrollView>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:padding="8dp"
        android:text="Haven't registered yet? Sign Up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signupbutton"
        android:text="Sign Up"
        android:backgroundTint="@color/black"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/homePage"
        android:text="Home Page"
        android:backgroundTint="@color/black"/>
<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/profile"-->
<!--        android:text="Profile Page"-->
<!--        android:backgroundTint="@color/black"/>-->
<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/rate"-->
<!--        android:text="Ratings Page"-->
<!--        android:backgroundTint="@color/black"/>-->



</LinearLayout>
