<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:id="@+id/et1"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connect"
        android:id="@+id/bt1"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/chatContainer">
            <!-- Chat messages will be dynamically added here -->
        </LinearLayout>

    </ScrollView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Type a message"
        android:id="@+id/messageInput"
        android:textSize="18sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send"
        android:id="@+id/sendButton"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:background="@color/colorPrimary"
        android:textColor="#FFFFFF" />

    <!-- TextView for status messages -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statusTextView"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:padding="16dp"/>

</LinearLayout>
