...
        app:cardElevation="20dp"
        android:background="@drawable/custom_editing">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Announcement"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textAlignment="center"
            android:padding="20dp"/>
    </androidx.cardview.widget.CardView>

...
